v0.15.1/_sources/lcls-twincat-pmps_PMPS_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 5.40.55.128.1.1
      -
    * - Target IP address
      - 5.40.55.128
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PMPS_pragmas:

Pragmas
-------

Total pragmas found: 208
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        Tc2_MC2, Beckhoff Automation GmbH, Unset, 
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 
        Tc2_System, Beckhoff Automation GmbH, Unset, 
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, 
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, 

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4388128 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 949892304 (8)
        Constants.bLittleEndian, BOOL, 949891872 (8)
        Constants.bSimulationMode, BOOL, 949891880 (8)
        Constants.CompilerVersion, VERSION, 949892224 (64)
        Constants.CompilerVersionNumeric, DWORD, 949892352 (32)
        Constants.nPackMode, UINT, 949892288 (16)
        Constants.nRegisterSize, WORD, 949891888 (16)
        Constants.RuntimeVersion, VERSION, 949892160 (64)
        Constants.RuntimeVersionNumeric, DWORD, 949892320 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4387648 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4388000 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4388496 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4385960 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4388464 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4388448 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4385968 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4388512 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4388480 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4388544 (2048)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626251648 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 626219616 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626217568 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626217536 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626219624 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626219632 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4390592 (621826944)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626219648 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4388488 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4387296 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4387424 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4384240 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4387456 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>217 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180192 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180320 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180288 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180448 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180256 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180224 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180352 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180128 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180096 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180160 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4180864 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4180896 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4181952 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4181888 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4181984 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182016 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182048 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182080 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4181920 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4179984 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4179920 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4179760 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4179792 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4179744 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4179872 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4179888 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4179904 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180000 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4179776 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4179968 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4179824 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4179856 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4179936 (16)
        Global_Variables.ADSSTATE_START, UINT, 4179808 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4179840 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180016 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4179952 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247744 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247776 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4247808 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179456 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179680 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179696 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179568 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179488 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179552 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179584 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179504 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179520 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179536 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179600 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179616 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179632 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179648 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179664 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179472 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4179728 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4179712 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182112 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180088 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180080 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260704 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260736 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267008 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4266976 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4266944 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267040 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4182848 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634580160 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4246488 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184512 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4383280 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4383288 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634580096 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248384 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386408 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386112 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4385984 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246496 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4182768 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4247856 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4247840 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4247872 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4247888 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4247904 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248224 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248000 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248320 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248096 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248352 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4247936 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4247968 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248064 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248192 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248256 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248128 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248032 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182208 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182272 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182240 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182144 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182304 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182176 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248736 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248480 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4247824 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184480 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184360 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184448 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184464 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247712 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246176 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246080 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246048 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246016 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184368 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246240 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4184528 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246464 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4184520 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246480 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4182880 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246472 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182136 (8)
        Global_Variables.PI, LREAL, 4182784 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246400 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246432 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246368 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181056 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181024 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246336 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181120 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247680 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181088 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181152 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181184 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246112 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246144 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4180928 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4180960 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4180992 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182120 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182128 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255360 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255680 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255296 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255072 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254224 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254608 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255232 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255552 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255104 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255424 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255168 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255488 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4182752 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4182736 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182640 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182576 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182592 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182608 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182560 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182624 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182704 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182656 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182688 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4182720 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182672 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634573088 (6976)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4181824 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4181728 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4181792 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4181760 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4181856 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255744 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634580224 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634572800 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4386720 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387008 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184032 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4387712 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4388160 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183424 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634572512 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.fbArbiterTest, FB_Arbiter_Test, 774813824 (36797888)
        MAIN.fbArbToSubSysTest, FB_ArbToSubsys_Test, 915458688 (34423872)
        MAIN.fbBPTMTest, FB_BPTM_Test, 668179200 (37975744)
        MAIN.fbDiffBPTest, FB_DiffBP_Test, 634627456 (33551744)
        MAIN.fbevRangeCalcTest, FB_evRangeCalculator_Test, 846402624 (33551808)
        MAIN.fbFFTest, FB_FastFault_Test, 739706688 (35107136)
        MAIN.fbSafeBPCompareTest, FB_SafeBPCompare_Test, 706154944 (33551744)
        MAIN.fbSetPERanges, PE_Ranges, 634627424 (32)
        MAIN.fbSubSysToArbTest, FB_SubsysToArb_Test, 989258368 (35534016)
        MAIN.fbVetoArbiterTest, FB_VetoArbiter_Test, 811611712 (34790912)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 949889952 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 949886288 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 949887520 (1216)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 949886304 (1216)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 949888736 (1216)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 949889984 (512)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 949886080 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 949886208 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 949885536 (512)
        PMPS_GVL.g_areVBoundariesK, REAL, 949891072 (512)
        PMPS_GVL.g_areVBoundariesL, REAL, 949890560 (512)
        PMPS_GVL.g_cBoundaries, INT, 949890496 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 949889968 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 949886112 (32)
        PMPS_GVL.MAX_STOPPERS, UINT, 949886272 (16)
        PMPS_GVL.PERange, PE_Ranges, 949886048 (32)
        PMPS_GVL.reVHyst, REAL, 949890528 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 949884320 (1216)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 949883104 (1216)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 949886144 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 949891584 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 949890512 (16)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 949891616 (256)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4387680 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 949940512 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 949895520 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 949892384 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 949894464 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 949895488 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 949894432 (32)


