v3.0.13/_sources/lcls-twincat-pmps_PMPS_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.148.42.1.1
      -
    * - Target IP address
      - 172.21.148.42
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PMPS_pragmas:

Pragmas
-------

Total pragmas found: 274
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        SysDir, System, , Unset
        SysFile, System, , Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, , Unset
        Tc2_IoFunctions, Beckhoff Automation GmbH, , Unset
        Tc2_Math, Beckhoff Automation GmbH, , Unset
        Tc2_MC2, Beckhoff Automation GmbH, Unset, Unset
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, , Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, , Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_EventLogger, Beckhoff Automation GmbH, , Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, , Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 323917792 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 429690320 (8)
        Constants.bLittleEndian, BOOL, 429690144 (8)
        Constants.bSimulationMode, BOOL, 429690152 (8)
        Constants.CompilerVersion, VERSION, 429690224 (64)
        Constants.CompilerVersionNumeric, DWORD, 429690368 (32)
        Constants.nPackMode, UINT, 429690304 (16)
        Constants.nRegisterSize, WORD, 429690288 (16)
        Constants.RuntimeVersion, VERSION, 429690160 (64)
        Constants.RuntimeVersionNumeric, DWORD, 429690336 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 323832640 (64)
        DefaultGlobals.stSys, ST_System, 323832512 (88)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, INT, 323832608 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 323916960 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 323917088 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 323832944 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 323917120 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>217 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 323626624 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 323626528 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 323626560 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 323626400 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 323626496 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 323626336 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 323626592 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 323626368 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 323626432 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 323626464 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 323626208 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 323625984 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 323626112 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 323626176 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 323626080 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 323626240 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 323626272 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 323626048 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 323626016 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 323626144 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 323625920 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 323626304 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 323625888 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 323625952 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 323626656 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 323626688 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 323627744 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 323627680 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 323627776 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 323627808 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 323627840 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 323627872 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 323627712 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 323625792 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 323625728 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 323625856 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 323625568 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 323625840 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 323625600 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 323625552 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 323625680 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 323625872 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 323625696 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 323625712 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 323625808 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 323625584 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 323625776 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 323625632 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 323625664 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 323625744 (16)
        Global_Variables.ADSSTATE_START, UINT, 323625616 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 323625648 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 323625824 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 323625760 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 323693472 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 323693504 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 323692208 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 323625264 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 323625248 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 323625488 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 323625504 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 323625376 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 323625296 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 323625360 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 323625392 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 323625312 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 323625328 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 323625344 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 323625408 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 323625424 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 323625440 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 323625456 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 323625472 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 323625280 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 323625536 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 323625520 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 323627928 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 323627920 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 323627904 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 315279496 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 323627912 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 323706432 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 323706464 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 323712736 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 323712704 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 323712672 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 323712768 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 323628576 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 323925440 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 323692200 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 323630192 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 323829936 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 323829944 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 323925376 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 323694080 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 323832104 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 323831808 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 323831680 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 323692224 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 323629216 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 323693568 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 323693552 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 323693584 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 323693600 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 323693616 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 323693920 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 323693696 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 323694016 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 323693792 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 323693984 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 323694048 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 323693632 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 323693664 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 323693856 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 323693760 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 323693888 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 323693952 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 323693824 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 323693728 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 323628032 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 323628096 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 323628064 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 323627968 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 323628128 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 323628000 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 323694432 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 323694176 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 323693536 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 323630208 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 323629240 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 323630160 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 323630176 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 323693440 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 323691872 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 323691904 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 323691776 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 323691744 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 323691712 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 323630144 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 323691936 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 323692064 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 323692080 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 323630200 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 323692192 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 323628672 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 323692088 (8)
        Global_Variables.nWatchdogTime, BYTE, 323629232 (8)
        Global_Variables.PI, LREAL, 323628608 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 323692128 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 323692160 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 323692096 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 323691968 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 323627488 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 323626848 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 323626816 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 323692000 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 323692032 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 323626912 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 323627232 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 323627200 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 323693408 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 323627072 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 323626880 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 323627168 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 323627104 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 323626944 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 323627264 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 323627136 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 323627008 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 323627040 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 323626976 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 323691808 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 323691840 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 323627296 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 323626720 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 323626752 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 323626784 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 323627360 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 323627328 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 323627392 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 323627456 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 323627424 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 323627936 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 323627944 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 323701056 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 323701376 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 323700992 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 323701312 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 323700768 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 323699920 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 323700304 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 323700928 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 323701248 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 323700800 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 323701120 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 323700864 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 323701184 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 323628560 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 323628544 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 323628448 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 323628384 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 323628400 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 323628416 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 323627952 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 323628432 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 323628512 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 323628464 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 323628496 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 323628528 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 323628480 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 323918400 (6976)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 323627616 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 323627520 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 323627584 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 323627552 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 323627648 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 323701440 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 323915808 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 323916096 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 323925504 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 323918112 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 323916384 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 323916672 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 323624672 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 323624960 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 323629856 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 323917376 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 323917824 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 323629248 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 323624384 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 323917312 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 323917664 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 323832600 (8)
        GVL_Logger.cLogHost, STRING(15), 323832704 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 323833792 (81984)
        GVL_Logger.iLogPort, UINT, 323832624 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 323833760 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 323832960 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 323832896 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 323832928 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 323915776 (32)
        GVL_Logger.nTrickleTripTime, TIME, 323832992 (32)
        GVL_Logger.nTripResetPeriod, TIME, 323833024 (32)
        GVL_Logger.sIpTidbit, STRING(6), 323832832 (56)
        GVL_Logger.sPlcHostname, STRING(80), 323833056 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 323833728 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4098144 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4096048 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4096032 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4096016 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4096000 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4098176 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4096064 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4096056 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4096096 (2048)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 315303520 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 315295520 (8000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4098168 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 315277440 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 315277408 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 315279488 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 315279504 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4098208 (311179200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 315279520 (16000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4098160 (8)


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 323832552 (48)


MAIN
^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MAIN.fbArbiterTest, FB_Arbiter_Test, 468337408 (38020224)
        MAIN.fbArbToSubSysTest, FB_ArbToSubsys_Test, 632851280 (34558784)
        MAIN.fbBPTMTest, FB_BPTM_Test, 357513856 (38612160)
        MAIN.fbDiffBPTest, FB_DiffBP_Test, 323962112 (33551744)
        MAIN.fbevRangeCalcTest, FB_evRangeCalculator_Test, 563495376 (33551808)
        MAIN.fbFFTest, FB_FastFault_Test, 433117120 (35220288)
        MAIN.fbSafeBPCompareTest, FB_SafeBPCompare_Test, 396126016 (33551744)
        MAIN.fbSetPERanges, PE_Ranges, 323962048 (32)
        MAIN.fbSubSysToArbTest, FB_SubsysToArb_Test, 597047184 (35804096)
        MAIN.fbVetoArbiterTest, FB_VetoArbiter_Test, 506357632 (35025408)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 323917344 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 429683040 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 429686656 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 429684896 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 429683136 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 429686688 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 429682816 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 429682944 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 429681792 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 429688800 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 429687776 (1024)
        PMPS_GVL.g_cBoundaries, INT, 429687712 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 429686672 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 429682848 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 429683056 (16)
        PMPS_GVL.PERange, PE_Ranges, 323962080 (32)
        PMPS_GVL.reVHyst, REAL, 429687744 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 429683072 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 429680032 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 429678272 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 429683008 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 429682880 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 429689824 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 429687728 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 429689856 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 429689888 (256)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 429725216 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 429693536 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 429690400 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 429692480 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 429693504 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 429692448 (32)


